--- a/distribution/index.html
+++ b/distribution/index.html
@@ -18166,7 +18166,7 @@ function stackinfo(value, node_id)
 			let j = 0;
 			for (let i=0; i<value.frame.temporaries.length; i++)
 			{
-if (! value.frame.temporaries[i]) continue;
+	if (! value.frame.temporaries[i]) continue;
 				if (value.frame.temporaries[i].hasOwnProperty("type") && value.frame.temporaries[i].hasOwnProperty("value"))
 				{
 					ret.children.push({
@@ -18892,7 +18892,8 @@ let cmd_load = function()
 			{
 				clear();
 
-				module.editor_title.innerHTML = "editor &mdash; " + filename;
+				module.editor_title.innerHTML = "editor &mdash; ";
+				tgui.createText(filename, module.editor_title);
 				module.document.filename = filename;
 				module.sourcecode.setValue(localStorage.getItem("tscript.code." + filename));
 				module.sourcecode.getDoc().setCursor({line: 0, ch: 0}, );
@@ -18920,7 +18921,8 @@ let cmd_save_as = function()
 {
 	let dlg = fileDlg("save file as ...", module.document.filename, true, function(filename)
 			{
-				module.editor_title.innerHTML = "editor &mdash; " + filename;
+				module.editor_title.innerHTML = "editor &mdash; ";
+				tgui.createText(filename, module.editor_title);
 				module.document.filename = filename;
 				cmd_save();
 				module.sourcecode.focus();
